fix NavBar alignment

--- a/src/components/ui/NavBar/NavBar.module.scss
+++ b/src/components/ui/NavBar/NavBar.module.scss
@@ -8,7 +8,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 
   width: 100%;
   height: var(--navbar-height);
@@ -23,6 +23,8 @@
 
 @media (width > 810px) {
   .navbar {
+    justify-content: space-evenly;
+
     nav {
       width: 65%;
     }
